# au_cg

./: .gitignore  .gitmodules
task1/: CMakeLists.txt  README.md  Renderer.h  ShaderLoader.cpp  SimpleRenderer.cpp  SimpleRenderer.h  main.cpp
task1/shaders/: fragment_shader.glsl  vertex_shader.glsl
task2/: CMakeLists.txt  README.md  Renderer.h  SimpleRenderer.cpp  SimpleRenderer.h  main.cpp  obj_parser.cpp  obj_parser.h
task2/shaders/: cube_fs.glsl  cube_vs.glsl  reflect_fs.glsl  reflect_vs.glsl
task2/stb_image/: stb_image.c
task3/: CMakeLists.txt  PointLight.h  ShaderLoader.cpp  gbuffer.cpp  gbuffer.h  main.cpp  obj_parser.cpp
task3/shaders/: bulb_fs.glsl  bulb_vs.glsl  first_pass_fs.glsl  first_pass_plane_fs.glsl  first_pass_plane_vs.glsl  gamma_pass_fs.glsl  gamma_pass_vs.glsl  second_pass_fs.glsl
task3/stb_image/: stb_image.c  stb_image.h
